--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
-    "client": "cd client && npm start"
+    "client": "cd client && npm start",
+    "install": "concurrently \"cd client && npm install\" \"cd server && npm install\" "
   },
   "keywords": [],
   "author": "",
